--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -12,13 +12,13 @@
     <p id="description">Thank you for taking the time to help us improve the platform</p>
     <form id="survey-form">
       <label id="name-label" for="name">Name</label><br>
-      <input type="text" id="name" name="name" placeholder="Enter your name"><br>
+      <input type="text" id="name" name="name" placeholder="Enter your name" class="full-width"><br>
       <label id="email-label" for="email">Email</label><br>
-      <input type="emial" id="email" name="email" placeholder="Enter your Email"><br>
+      <input type="emial" id="email" name="email" placeholder="Enter your Email" class="full-width"><br>
       <label id="number-label" for="number">Age(optional)</label><br>
-      <input type="number" id="number" name="number" placeholder="Age"><br>
+      <input type="number" id="number" name="number" placeholder="Age" class="full-width"><br>
       <lebel for="dropdown">Which option best describes your current role?</lebel><br>
-      <select id="dropdown" name="dropdown">
+      <select id="dropdown" name="dropdown" class="full-width">
         <option>student</option>
         <option>full time job</option>
         <option>full time learner</option>
@@ -54,10 +54,10 @@
       <input type="checkbox" value="Forum" id="Forum" name="check">
       <label for="Forum">Forum</label><br>
       <input type="checkbox" value="Additional Courses" id="Additional Courses" name="check">
-      <label for="Additional Courses">Additional Courses</label><br>
+      <label for="Additional Courses">Additional Courses</label><br><br>
       <label for="suggestions">Any comments or suggestions?</label><br>
-      <input name="suggestions" type="text" id="suggestions" placeholder="Enter your comment here..."><br>
-      <input type="submit" id="submit" value="Submit">
+      <input name="suggestions" type="text" id="suggestions" placeholder="Enter your comment here..." class="full-width"><br>
+      <input type="submit" id="submit" value="Submit" class="full-width">
     </form>
   </body>
 </html>
